# owl-raqic

./: .gitignore  .pre-commit-config.yaml  COURSE_USE_NOTICE.md  README.md  pyproject.toml  requirements-gpu-cu12.txt  requirements-gpu-dev.txt
configs/: cadc_phase1_exact_25tick.yaml  cadc_phase25_action_contracts_25tick.yaml  cadc_phase3_phase25_h100_acceptance.yaml  cadc_phase3_phase25_numpy_smoke.yaml  cadc_phase4_b200_budget_64.yaml  cadc_phase4_b200_development.yaml  cadc_phase4_b200_fp8_experimental.yaml  cadc_phase4_cpu_smoke.yaml  cadc_phase4_development.yaml  cadc_phase4_freeze_candidate.yaml  cadc_phase4_h100_budget_32.yaml  cadc_phase4_h100_budget_64.yaml  cadc_phase4_h100_budget_96.yaml  cadc_phase4_h100_corpus_pilot.yaml  cadc_phase4_h100_model_pilot.yaml  cadc_phase4_h200_budget_64.yaml  cadc_phase4_h200_development.yaml  carnivore_world.yaml  communication.yaml  default.yaml  fragmented.yaml  gpu_full_hybrid_audit_small.yaml  gpu_full_medium.yaml  gpu_full_overnight_allcell.yaml  gpu_full_small.yaml  gpu_full_visual_demo.yaml  gpu_v07_graph_benchmark.yaml  gpu_v07_overnight_optimized.yaml  gpu_v07_persistent_small.yaml  gpu_v08_exploratory_fast32.yaml  gpu_v08_graph_audit64.yaml  gpu_v08_production_mixed.yaml  gpu_v08_validation_audit64.yaml  gpu_v093_production_persistent.yaml  gpu_v0952_b200_raqic_authoritative.yaml  gpu_v095_production_persistent.yaml  gpu_v095_profile_stencils.yaml  gpu_v096_actualization_baseline_recovery.yaml  gpu_v096_interference_authoritative.yaml  gpu_v096_interference_shadow.yaml  (+35 more)
docs/: ARCHITECTURE.md  REFERENCES.json  REFERENCES.md
schemas/: cadc_phase4_config.schema.json  function_manifest.schema.json  simulation_config.schema.json
scripts/: _phase4_counterfactual_runtime.py  _release_integrity.py  _repo_bootstrap.py  _run_cadc_phase4_corpus_unit.py  analyze_cadc_phase4_repeat_pilot.py  build_cadc_phase4_casebook.py  build_cadc_phase4_dataset.py  build_cadc_phase4_scored_artifacts.py  calibrate_cadc_phase4.py  capture_cadc_phase4_environment.py  certify_cadc_phase3.py  certify_cadc_phase4.py  certify_cadc_phase4_corpus.py  certify_phase25_action_contracts.py  check_docs_against_repo.py  check_quality_toolchain.py  create_cadc_phase4_schema.py  create_config_schema.py  create_synthetic_replay_fixture.py  estimate_cadc_phase4_runtime.py  evaluate_cadc_phase4.py  export_cadc_phase4_local_artifacts.py  gpu_certify_full_stack.sh  gpu_certify_full_tick_graph.sh  gpu_certify_qiskit_aer.sh  gpu_certify_runtime.sh  gpu_full_install_validate.sh  gpu_full_profile.sh  gpu_full_run_overnight.sh  gpu_full_run_small.sh  hash_run_environment.py  owl_experiment.py  package_cadc_phase4_reusable_data.py  quality_fast.sh  (+24 more)
(+516 files in other folders)
